[gd_scene load_steps=3 format=3 uid="uid://xemd6fv5gt48"]

[ext_resource type="Script" path="res://UI/hud.gd" id="1_x5516"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ob5q4"]
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color(0, 0, 0, 0.588235)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x5516")

[node name="CountdownContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ob5q4")

[node name="CenterContainer" type="CenterContainer" parent="CountdownContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CountdownContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "1"

[node name="PointsDisplay" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 72.0
grow_horizontal = 2
theme_override_constants/separation = 75
alignment = 1

[node name="ScorePlayer" type="Label" parent="PointsDisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "0"

[node name="ScoreEnemy" type="Label" parent="PointsDisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "0"
